@@ -1,3 +1,8 @@
+2010-08-15  Jan Djärv  <jan.h.d@swipnet.se>
+
+	* keyboard.c (parse_tool_bar_item): malloc buf.  Set TOOL_BAR_ITEM_LABEL
+	to empty string if not set to new_lbl (Bug#6855).
+
 2010-08-14  Eli Zaretskii  <eliz@gnu.org>
 
 	* xterm.c (x_draw_stretch_glyph_string):
